2008-04-15  Juanma Barranquero  <lekktu@gmail.com>

	* international/uni-bidi.el, international/uni-category.el:
	* international/uni-combining.el, international/uni-comment.el:
	* international/uni-decimal.el, international/uni-decomposition.el:
	* international/uni-digit.el, international/uni-lowercase.el:
	* international/uni-mirrored.el, international/uni-name.el:
	* international/uni-numeric.el, international/uni-old-name.el:
	* international/uni-titlecase.el, international/uni-uppercase.el:
	* international/charprop.el: Regenerate.

2008-04-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-fileinfo): Add new member directoryp.
	(vc-default-status-printer): Print directories.
	(vc-status-update): Sort files before subdirectories.

	* vc-cvs.el (vc-cvs-after-dir-status, vc-cvs-dir-status):
	Add alternative implementation based on "cvs update".

2008-04-15  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el: Changed requirements section to tell that only one
	of dvipdf or dvipdfm is needed.
	(doc-view-already-converted-p): Fix bug that forced reconversion
	if doc was already converted.

2008-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-message):
	Make sure we can put-text-property.

	* emacs-lisp/crm.el: Complete rewrite.

	* tmm.el (tmm-completion-delete-prompt): Don't hardcode point-min==1.
	(tmm-add-prompt): Make sure completion-setup-hook is preserved even in
	case of an error in display-completion-list.

	* filecache.el (file-cache-completions-keymap): Move init from
	file-cache-completion-setup-function into declaration.
	(file-cache-minibuffer-complete): Simplify.
	(file-cache-completion-setup-function): Use standard-output,
	preserve current-buffer.

	* vc.el (vc-status-update): Fix typo.
	(vc-status-update): Set needs-update.
	(vc-status-refresh): η-reduce.

2008-04-14  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode-map): Bind C-a to image-bol and C-e
	to image-eol.
